--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,10 @@ font-weight: 500;
   width: 100%;
   background-size:100% 100% !important;
 }
+.text-team{
+  font-size: 0.6em;
+  font-weight: 600;
+}
 @media (max-width: 780px){
   .team-section{
     background-image: url(../images/bg_team.png);
@@ -369,8 +373,8 @@ font-weight: 450;
 }
 /* =====================================services=========================== */
 .btn-services{
-  background-color: black;
-  border: 2px solid black;
+  background-color: rgb(36, 36, 36);
+  border: 2px solid  rgb(36, 36, 36);
   color: white;
   padding: 4px 22px;
   font-size: 12px;
@@ -403,6 +407,28 @@ font-weight: 450;
 @media (max-width: 780px){
   .service-section{
     background-image: url(../images/bg-services.png);
+    background-repeat: no-repeat;  
+    width: 100%;
+    background-size:auto 100% !important;
+  }
+}
+/* =====================================Portfolio============================================ */
+.portfolio-section{
+  background-image: url(../images/bg-portfolio.png);
+  background-repeat: no-repeat;  
+  width: 100%;
+  background-size:100% 100% !important;
+}
+.text-port{
+  font-size: 0.7em;
+  font-weight: 650;
+}
+.pointer{
+  cursor: pointer;
+}
+@media (max-width: 780px){
+  .portfolio-section{
+    background-image: url(../images/bg-portfolio.png);
     background-repeat: no-repeat;  
     width: 100%;
     background-size:auto 100% !important;
