--- a/css/style.css
+++ b/css/style.css
@@ -455,3 +455,7 @@ font-weight: 450;
 .text-box{
   font-size: 12px;
 }
+/* =================================services detail================================= */
+.text-ser{
+  font-size: 14px;
+}
