--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,46 @@ font-weight: 500;
   width: 100%;
   background-size:100% 100% !important;
 }
+.text-oranje{
+  color: #ff9900;
+}
+.border-form{
+  border-left: none !important;
+  border-right: none !important;
+  border-top: none !important;
+  border-radius: 0px !important;
+}
+.btn-apply{
+  background-color: #ff9900;
+  color: white !important;
+  padding: 4px 35px;
+  font-weight: 400 !important;
+  font-size: 14px;
+  border-radius: 25px;
+  text-align: center;
+}
+.btn-apply:hover{
+  background-color: transparent;
+  color: #ff9900!important;
+  border-color: #ff9900;
+  padding: 4px 35px;
+  font-weight: 400 !important;
+  font-size: 14px;
+  border-radius: 25px;
+  text-align: center;
+}
+.image-upload>input {
+  display: none;
+}
+.position-btn{
+position: absolute;
+top: 194px;
+right: 20px;
+}
+.text-small{
+  font-size: 14px;
+  border-left: 2px solid #ff9900;
+}
 @media (max-width: 780px){
   .career-section{
     background-image: url(../images/bg-career.png);
@@ -436,7 +476,7 @@ font-weight: 450;
 }
 /* ===========================================portfolio Detail======================= */
 .heading-size{
-  font-size: 19px;
+  font-size: 18px;
 }
 .inner4 {
   width: 60px;
