--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ h6{
     background-image: url(../images/background.png);
     background-repeat: no-repeat;  
     width: 100%;
-    height: 100vh;
     background-size:100% 100% !important;
   }
   .bg-ser{
@@ -31,6 +30,12 @@ h6{
     background-repeat: no-repeat;  
     width: 100%;
     height: 100vh;
+    background-size:100% 100% !important;
+  }
+  .bg-says-2{
+    background-image: url(../images/bgg.png);
+    background-repeat: no-repeat;  
+    width: 100%;
     background-size:100% 100% !important;
   }
   .bg-main{
@@ -153,6 +158,10 @@ text-align: left;
     padding: 12px 0;
     font-size:14px;
   }
+  .top-position{
+    padding-top: 12rem;
+     padding-bottom: 20rem;
+  }
 @media (max-width: 780px){
     .bg-3{
         background-image: url(../images/bg-port.png);
@@ -166,6 +175,23 @@ text-align: left;
         width: 100%;
         height: auto;
         background-size:100% 100% !important;
+      }
+      .main-section{
+        background-image: url(../images/background.png);
+        background-repeat: no-repeat;  
+        width: 100%;
+        background-size:auto 100% !important;
+      }
+      .bg-says-2{
+        background-image: url(../images/bgg.png);
+        background-repeat: no-repeat;  
+        width: 100%;
+        height: auto;
+        background-size:100% 100% !important;
+      }
+      .top-position{
+        padding-top: 6rem;
+         padding-bottom: 10rem;
       }
       .left-center{
         text-align:center;
