--- a/css/style.css
+++ b/css/style.css
@@ -578,3 +578,10 @@ font-weight: 450;
   padding-top: 0.2rem; 
   padding-bottom: 0.2rem;
 }
+.activee{
+     padding-bottom: 0.5rem;
+     border-bottom: 2px solid #ff9900;
+     color: black;
+     font-weight: bold;
+     font-size: 0.8em;
+}
